# r1delta

./: .gitignore  .gitmodules  CMakeLists.txt
include/: dedicated.h
src/: factory.cpp  load.cpp  navmesh.cpp  patcher.cpp  squirrel.cpp
